--- a/index.html
+++ b/index.html
@@ -1,9 +1,310 @@
 <!DOCTYPE html>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+<script type="text/javascript">
+</script>
+
+<style type="text/css">
+</style>
+
 <html>
-<head>
-	<title>MeuSitePessoal</title>
-</head>
-<body>
-<h1>Nonato Júnior</h1>
-</body>
+	<head>
+		<title>Nonato Júnior</title>
+	</head>
+	<body style="background-color: #E0ECF8;">
+		<div class="container-fluid">
+			<div class="container">
+				<div class="row">
+				  <div class="col-md-2">
+				  	<br>
+				    <a href="#" class="thumbnail">
+				      <img src="https://scontent.fssa1-1.fna.fbcdn.net/v/t1.0-9/11140324_842087995888451_608299956789673070_n.jpg?oh=89233574abc1aa05b1fd0366a1e3fabf&oe=58F8B130" alt="Foto Perfil">
+				    </a>
+				  </div>
+					<h1>NONATO JÚNIOR</h1>
+				</div>
+				<br>
+				<div class="panel panel-default">
+				  <div class="panel-heading">
+				    <h3 class="panel-title"><b>CURRÍCULO RESUMIDO</b></h3>
+				  </div>
+				  <div class="panel-body">
+				    Formado em Administração, mas amante da Computação, se descobriu quando entrou na PGE e acabou juntando os processos administrativos com a TI, desenvolvedor Ruby on Rails, desenvolve atividades de análise de sistemas nas linguagens de programação Ruby on Rails, JavaScript (jQuery) e HTML juntamente com o banco de dados PostgresSQL. Com experiência em desenvolvimento de projetos (Ágil, Scrum, Kanban), hábil em levantamento de requisitos e documentação de sistemas.
+				  </div>
+				</div>
+				<div class="panel panel-default">
+				  <div class="panel-heading">
+				    <h3 class="panel-title"><b>INFORMAÇÕES GERAIS</b></h3>
+				  </div>
+				  <div class="panel-body">
+				    <h4><u>Situação Acadêmica</u></h4>
+				    <ul>
+				    	<div class="row">
+				    		<b>
+					    		<div class="col-md-9">
+					    			<li>2010 - E.E.F.M Walter de Sá Cavalcante</li>
+					    		</div>
+					    		<div class="col-md-3">
+					    			Fortaleza - CE
+					    		</div>
+				    		</b>
+				    	</div>
+				    	2º Grau - Completo
+				    	<br>
+				    	<br>
+				    	<div class="row">
+				    		<b>
+					    		<div class="col-md-9">
+										<li>2016 - Faculdade Ateneu - FATE</li>
+									</div>
+									<div class="col-md-3">
+										Fortaleza - CE
+									</div>
+								</b>
+							</div>
+							Graduado em Administração de Empresas - Bacharelado
+				    </ul>
+				    <br>
+				    <h4><u>Habilidades</u></h4>
+				    <ul>
+				    	<li>Conhecimentos em Ruby on Rails, JavaScript, jQuery, HTML, GIT, PostgresSQL, Conhecimentos em Bootstrap;</li>
+							<li>Conhecimentos em informática (software / hardware);</li>
+							<li>Conhecimentos no pacote Office;</li>
+							<li>Conhecimentos no pacote LibbreOffice;</li>
+							<li>Conhecimentos na organização e indexação de documentos;</li>
+				    </ul>
+				    <br>
+				    <h4><u>Cursos</u></h4>
+				    <ul>
+				    	<li>Computação Básica</li>
+							<li>Digitação;</li>
+							<li>Manutenção de Computadores – News Center</li>
+							<li>Lógica de Programação</li>
+							<li>Java e Orientação a Objetos – TriadWorks</li>
+							<li>Ruby e Orientação a Objetos</li>
+							<li>Desenvolvimento Web com Ruby utilizando o framework Rails</li>
+							<li>Simplificação de Processos – Escola de Gestão Pública – EGP</li>
+							<li>Gerenciamento de Projetos na Prática – Faculdade Ateneu – FATE</li>
+							<li>Marketing Empresarial</li>
+							<li>Auxiliar de Escritório</li>
+							<li>Organização e Gestão de Arquivos e Documentos – MRH Cursos</li>
+							<li>Plano de Negócios – Faculdade Ateneu – FATE</li>
+							<li>Design Básico utilizando a ferramenta Inkscape</li>
+				    </ul>
+				    <br>
+				    <h4><u>Experiências</u></h4>
+				    <ul>
+				    	<b>
+						    <div class="row">
+						    	<div class="col-md-9">
+						    		<li>Março/2015 - Atualmente</li>
+						    	</div>
+						    	<div class="col-md-3">
+										Fortaleza - CE
+						    	</div>
+					    	</div>
+					    </b>
+					    <b>
+						    <i>
+						    	<div class="row">
+						    		<div class="col-md-4">
+						    			AGIL-GPR
+						    		</div>
+						    		<div class="col-md-8">
+						    			Cargo:​ Analista de Sistemas
+						    		</div>
+						    	</div>
+						    </i>
+					    </b>
+				    	<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Desenvolvimento de ERP (Ruby on Rails e Bootstrap), aplicação web para o controle de fluxo de trabalho, com ênfase na comunicação e monitoramento entre áreas &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(controles financeiro, logística, estoque, vendas e relatórios).
+				    	<br>
+				    	<br>
+				    	<b>
+							  <div class="row">
+							  	<div class="col-md-9">
+							  		<li>Abril/2014 - Março/2015</li>
+							  	</div>
+							  	<div class="col-md-3">
+										Fortaleza - CE
+							  	</div>
+								</div>
+							</b>
+							<b>
+							  <i>
+							  	<div class="row">
+							  		<div class="col-md-4">
+							  			Procuradoria Geral do Estado do Ceará - PGE
+							  		</div>
+							  		<div class="col-md-8">
+							  			Cargo:​ Programador Pleno
+							  		</div>
+							  	</div>
+							  </i>
+							</b>
+							<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Programação focada na manutenção e novas implementações em aplicações web (Ruby on Rails, JavaScript, JQuery, PostgreSQL e Bootstrap);
+							<br>
+							<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Levantamento de requisitos com os clientes finais e gestores de desenvolvimento, visando elaborar os processos que serão utilizados na criação dos sistemas e &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;aplicações nas áreas com foco no processo 100% digital;
+							<br>
+							<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Desenvolvimento de sistemas WEB;
+							<br>
+							<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Homologação, análise e manutenção de sistemas legados da PGE;
+							<br>
+							<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Implantação de novas funcionalidades nos sistemas;
+							<br>
+							<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Melhoria e inovação de sistemas;
+							<br>
+							<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Implementação e comunicação de web services (PGE / SEFAZ);
+							<br>
+							<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Disponibilizar projetos no repositório remoto (GIT);
+							<br>
+							<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Elaboração de fluxograma;
+							<br>
+							<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Implementação de scripts em SQL, utilizando o banco de dados PostgreSQL (PGAdmin);
+							<br>
+							<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Especificação de sistemas juntamente com o cliente;
+							<br>
+							<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Auxiliar no III Curso Brasileiro Interdisciplinar em Direitos Humanos, ministrado no hotel Blue Tree Premium, realizado pelo Centro de Estudos e Treinamento da &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Procuradoria Geral do Estado do Ceará – CETREI;
+							<br>
+							<br>
+							<b>
+							  <div class="row">
+							  	<div class="col-md-9">
+							  		<li>Fevereiro/2012 - Abril/2014</li>
+							  	</div>
+							  	<div class="col-md-3">
+										Fortaleza - CE
+							  	</div>
+								</div>
+							</b>
+							<b>
+							  <i>
+							  	<div class="row">
+							  		<div class="col-md-4">
+							  			Procuradoria Geral do Estado do Ceará - PGE
+							  		</div>
+							  		<div class="col-md-8">
+							  			Cargo:​ Técnico de Atendimento
+							  		</div>
+							  	</div>
+							  </i>
+							</b>
+							<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Suporte técnico por telefone aos usuários;
+							<br>
+							<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Registro de solicitações no sistema;
+							<br>
+							<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Encerrar solicitações no sistema;
+							<br>
+							<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Serviço de pós atendimento;
+							<br>
+							<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Elaboração de documentos formais;
+							<br>
+							<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Elaboração de procedimento operacional padrão - POP;
+							<br>
+							<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Digitador;
+							<br>
+							<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Secretário de reunião;
+							<br>
+							<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Elaboração de ata de reunião;
+							<br>
+							<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Elaboração de organograma;
+							<br>
+							<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Elaboração de indicadores de TI;
+							<br>
+							<br>
+							<b>
+							  <div class="row">
+							  	<div class="col-md-9">
+							  		<li>Maio/2010 - Janeiro/2012</li>
+							  	</div>
+							  	<div class="col-md-3">
+										Fortaleza - CE
+							  	</div>
+								</div>
+							</b>
+							<b>
+							  <i>
+							  	<div class="row">
+							  		<div class="col-md-4">
+							  			MRH Gestão de Arquivos
+							  		</div>
+							  		<div class="col-md-8">
+							  			Cargo:​ Técnico de Atendimento
+							  		</div>
+							  	</div>
+							  </i>
+							</b>
+							<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Pesquisa e localização de documentos;
+							<br>
+							<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Registro de expedição de documentos;
+							<br>
+							<br>
+							<b>
+							  <div class="row">
+							  	<div class="col-md-9">
+							  		<li>Janeiro/2010 - Maio/2010 - Estágio</li>
+							  	</div>
+							  	<div class="col-md-3">
+										Fortaleza - CE
+							  	</div>
+								</div>
+							</b>
+							<b>
+							  <i>
+							  	<div class="row">
+							  		<div class="col-md-4">
+							  			MRH Gestão de Arquivos
+							  		</div>
+							  		<div class="col-md-8">
+							  			Cargo:​ Auxiliar de Atendimento
+							  		</div>
+							  	</div>
+							  </i>
+							</b>
+							<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Organização e indexação de documentos;
+							<br>
+							<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Arquivo de documentos;
+							<br>
+							<br>
+							<b>
+							  <div class="row">
+							  	<div class="col-md-9">
+							  		<li>Janeiro/2009 - Dezembro/2009</li>
+							  	</div>
+							  	<div class="col-md-3">
+										Fortaleza - CE
+							  	</div>
+								</div>
+							</b>
+							<b>
+							  <i>
+							  	<div class="row">
+							  		<div class="col-md-4">
+							  			Escritório de Contabilidade
+							  		</div>
+							  		<div class="col-md-8">
+							  			Cargo:​ Auxiliar de Escritório
+							  		</div>
+							  	</div>
+							  </i>
+							</b>
+							<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Arquivo de notas fiscais e documentos;
+							<br>
+							<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Lançamentos de notas fiscais no sistema;
+							<br>
+							<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Elaboração de documentos no pacote Office;
+							<br>
+							<br>
+				    </ul>
+				  </div>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
