atualização de informações

--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
 				      <img src="https://scontent.fssa1-1.fna.fbcdn.net/v/t1.0-9/11140324_842087995888451_608299956789673070_n.jpg?oh=89233574abc1aa05b1fd0366a1e3fabf&oe=58F8B130" alt="Foto Perfil">
 				    </a>
 				  </div>
-					<h1>NONATO JÚNIOR</h1>
+					<h1>Nonato Júnior</h1>
+					<p><b>E-mail:</b> nonatojunior.rnsj@gmail.com</p>
+					<p><b>Blog:</b> <a href="https://dicasrubyonrails.wordpress.com/" /></p>
+					<p><b>GitHub:</b> <a href="https://github.com/nonatojunior" /></p>
 				</div>
 				<br>
 				<div class="panel panel-default">
