resolução de erro

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 				  </div>
 					<h1>Nonato Júnior</h1>
 					<p><b>E-mail:</b> nonatojunior.rnsj@gmail.com</p>
-					<p><b>Blog:</b> <a href="https://dicasrubyonrails.wordpress.com/" /></p>
-					<p><b>GitHub:</b> <a href="https://github.com/nonatojunior" /></p>
+					<p><b>Blog:</b> <a href="https://dicasrubyonrails.wordpress.com/">Visitar</a></p>
+					<p><b>GitHub:</b> <a href="https://github.com/nonatojunior">Visitar</a></p>
 				</div>
 				<br>
 				<div class="panel panel-default">
@@ -121,12 +121,18 @@
 						    			AGIL-GPR
 						    		</div>
 						    		<div class="col-md-8">
-						    			Cargo:​ Analista de Sistemas
+						    			Cargo:​ Programador Pleno
 						    		</div>
 						    	</div>
 						    </i>
 					    </b>
-				    	<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Desenvolvimento de ERP (Ruby on Rails e Bootstrap), aplicação web para o controle de fluxo de trabalho, com ênfase na comunicação e monitoramento entre áreas &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(controles financeiro, logística, estoque, vendas e relatórios).
+				    	<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Desenvolvimento de ERP (Ruby on Rails e Bootstrap), aplicação web para o controle de fluxo de trabalho, com ênfase na comunicação e monitoramento entre áreas &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(controles financeiro, logística, estoque, vendas e relatórios);
+				    	<br>
+				    	<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Levantamento de requisitos junto ao cliente;
+				    	<br>
+				    	<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Facilitador no curso de Ruby on Rails, ministrado para à turma de estagiários da área de desenvolvimento de software;
+				    	<br>
+				    	<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Líder de equipe da área de desenvolvimento de sistemas.
 				    	<br>
 				    	<br>
 				    	<b>
