--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
 				    </a>
 				  </div>
 					<h1>Nonato Júnior</h1>
-					<p><b>E-mail:</b> nonatojunior.rnsj@gmail.com</p>
+					<p><b>E-mail:</b> <a href="#">nonatojunior.rnsj@gmail.com</a></p>
 					<p><b>Blog:</b> <a href="https://dicasrubyonrails.wordpress.com/">Visitar</a></p>
 					<p><b>GitHub:</b> <a href="https://github.com/nonatojunior">Visitar</a></p>
+					<p><b>Projeto Heroku:</b> <a href="http://racha-galera-da-rua.herokuapp.com/">Visitar</a> (Este projeto foi desenvolvido como forma de apredizado e com o intuito de tornar o racha (jogo de futebol) com os meus colegas mais empolgante, pois o projeto conta com uma lista de artilheiros, o que torna a disputa pelo topo ainda mais acirrada.)</p>
 				</div>
 				<br>
 				<div class="panel panel-default">
