alteração da foto de perfil

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				  <div class="col-md-2">
 				  	<br>
 				    <a href="#" class="thumbnail">
-				      <img src="https://scontent.fssa1-1.fna.fbcdn.net/v/t1.0-9/11140324_842087995888451_608299956789673070_n.jpg?oh=89233574abc1aa05b1fd0366a1e3fabf&oe=58F8B130" alt="Foto Perfil">
+				      <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAqFAAAAJDIyNjBkMTQyLTE3MmItNGIyOC04MTA1LWRhNzFlOTNjN2JmMw.jpg" alt="Foto Perfil">
 				    </a>
 				  </div>
 					<h1>Nonato Júnior</h1>
