alteração no nome jQuery

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<p><b>E-mail:</b> <a href="#">nonatojunior.rnsj@gmail.com</a></p>
 					<p><b>Blog:</b> <a href="https://dicasrubyonrails.wordpress.com/">Visitar</a></p>
 					<p><b>GitHub:</b> <a href="https://github.com/nonatojunior">Visitar</a></p>
-					<p><b>Projeto:</b> <a href="http://racha-galera-da-rua.herokuapp.com/">Visitar</a> (Este projeto foi desenvolvido como forma de apredizado e com o intuito de tornar o 'racha' (jogo de futebol) com os meus colegas, uma brincadeira mais empolgante, pois o projeto conta com uma lista de artilheiros, o que torna a disputa pelo topo bem acirrada. Tecnologias utilizadas: Linguagem de Programação Ruby on Rails / Banco de Dados PostgreSQL / HTML / CSS / Bootstrap / Jquery / Servidor Heroku)</p>
+					<p><b>Projeto:</b> <a href="http://racha-galera-da-rua.herokuapp.com/">Visitar</a> (Este projeto foi desenvolvido como forma de apredizado e com o intuito de tornar o 'racha' (jogo de futebol) com os meus colegas, uma brincadeira mais empolgante, pois o projeto conta com uma lista de artilheiros, o que torna a disputa pelo topo bem acirrada. Tecnologias utilizadas: Linguagem de Programação Ruby on Rails / Banco de Dados PostgreSQL / HTML / CSS / Bootstrap / jQuery / Servidor Heroku)</p>
 				</div>
 				<br>
 				<div class="panel panel-default">
