melhorias no texto do currículo resumido

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				    <h3 class="panel-title"><b>CURRÍCULO RESUMIDO</b></h3>
 				  </div>
 				  <div class="panel-body">
-				    Formado em Administração, mas amante da Computação, se descobriu quando entrou na PGE e acabou juntando os processos administrativos com a TI, desenvolvedor Ruby on Rails, desenvolve atividades de análise de sistemas nas linguagens de programação Ruby on Rails, JavaScript (jQuery) e HTML juntamente com o banco de dados PostgresSQL. Com experiência em desenvolvimento de projetos (Ágil, Scrum, Kanban), hábil em levantamento de requisitos e documentação de sistemas.
+				    Formado em Administração, mas amante da Computação, se descobriu quando entrou na PGE e acabou juntando os processos administrativos com a TI, desenvolvedor Ruby on Rails, desenvolve atividades de análise de sistemas nas linguagens de programação Ruby on Rails, JavaScript (jQuery) e HTML juntamente com o banco de dados PostgresSQL. Com experiência em desenvolvimento de projetos (Ágil, Scrum, Kanban), hábil em levantamento de requisitos e documentação de sistemas. O curso de Administração de Empresas foi de grande importância nesta minha caminhada, pois passei a ter uma visão melhor de como funciona uma empresa e suas respectivas áreas, principalmente quando ingressei em um projeto de desenvolvimento de ERP utilizando a medotologia AGIL-GPR que une técnicas contemporâneas de administrãção com a tecnologia da informação.
 				  </div>
 				</div>
 				<div class="panel panel-default">
