adicionado novas habilidades

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				    <h3 class="panel-title"><b>CURRÍCULO RESUMIDO</b></h3>
 				  </div>
 				  <div class="panel-body">
-				    Formado em Administração, mas amante da Computação, se descobriu quando entrou na Procuradoria Geral do Estado do Ceará - PGE e acabou juntando os processos administrativos com a TI, desenvolvedor Ruby on Rails, desenvolve atividades de análise de sistemas nas linguagens de programação Ruby on Rails, JavaScript (jQuery), CSS e HTML juntamente com o banco de dados PostgresSQL. Com experiência em desenvolvimento de projetos (Ágil, Scrum, Kanban), hábil em levantamento de requisitos e documentação de sistemas. A graduação em Administração foi de grande importância nesta minha caminhada, pois passei a ter uma visão melhor de como funciona uma empresa e suas respectivas áreas, principalmente quando ingressei em um projeto de desenvolvimento de Enterprise Resource Planning - ERP utilizando a metodologia AGIL-GPR que une técnicas contemporâneas de administração com a tecnologia da informação.
+				    Formado em Administração, mas amante da Computação, se descobriu quando entrou na Procuradoria Geral do Estado do Ceará - PGE e acabou juntando os processos administrativos com a TI, desenvolvedor Ruby on Rails, desenvolve atividades de análise de sistemas nas linguagens de programação Ruby on Rails, JavaScript (jQuery), CSS e HTML juntamente com o banco de dados PostgresSQL. Com experiência em desenvolvimento de projetos (Ágil, Scrum, Kanban), hábil em levantamento de requisitos e documentação de sistemas.
 				  </div>
 				</div>
 				<div class="panel panel-default">
@@ -78,11 +78,25 @@
 				    <br>
 				    <h4><u>Habilidades</u></h4>
 				    <ul>
-				    	<li>Conhecimentos em Ruby on Rails, JavaScript, jQuery, HTML, GIT, PostgresSQL, Conhecimentos em Bootstrap;</li>
-							<li>Conhecimentos em informática (software / hardware);</li>
-							<li>Conhecimentos no pacote Office;</li>
-							<li>Conhecimentos no pacote LibbreOffice;</li>
+				    	<li>Desenvolvimento de sistemas Web;</li>
+							<li>Levantamento de requisitos;</li>
+							<li>Implantação de sistemas;</li>
+							<li>Conhecimentos na linguagem Ruby on Rails;</li>
+							<li>Conhecimentos em JavaScript;</li>
+							<li>Conhecimentos em jQuery;</li>
+							<li>Conhecimentos em HTML;</li>
+							<li>Conhecimentos em CSS;</li>
+							<li>Conhecimentos em repositórios remoto GIT;</li>
+							<li>Conhecimentos em banco de dados PostgreSQL;</li>
+							<li>Conhecimentos em sistema operacional Linux;</li>
+							<li>Conhecimentos em Bootstrap;</li>
+							<li>Conhecimentos no servidor de aplicação Heroku;</li>
+							<li>Conhecimentos em informática (Software / Hardware);</li>
+							<li>Conhecimentos no pacote Microsoft Office (Word / Excel / Power Point);</li>
+							<li>Conhecimentos no pacote LibreOffice;</li>
 							<li>Conhecimentos na organização e indexação de documentos;</li>
+							<li>Elaboração de documentos utilizando pacote Microsoft Office e LibreOffice;</li>
+							<li>Elaboração de relatórios em Excel;</li>
 				    </ul>
 				    <br>
 				    <h4><u>Cursos</u></h4>
