correção de erros

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<p><b>E-mail:</b> <a href="#">nonatojunior.rnsj@gmail.com</a></p>
 					<p><b>Blog:</b> <a href="https://dicasrubyonrails.wordpress.com/">Visitar</a></p>
 					<p><b>GitHub:</b> <a href="https://github.com/nonatojunior">Visitar</a></p>
-					<p><b>Projeto:</b> <a href="http://racha-galera-da-rua.herokuapp.com/">Visitar</a> (Este projeto foi desenvolvido como forma de apredizado e com o intuito de tornar o "racha" (jogo de futebol) com os meus colegas, uma brincadeira mais empolgante, pois o projeto conta com uma lista de artilheiros, o que torna a disputa pelo topo bem acirrada. Tecnologias utilizadas: Linguagem de Programação Ruby on Rails / Banco de Dados PostgreSQL / HTML / CSS / Bootstrap / jQuery / GitHub / Heroku)</p>
+					<p><b>Projeto:</b> <a href="http://racha-galera-da-rua.herokuapp.com/">Visitar</a> (Este projeto foi desenvolvido como forma de aprendizado e com o intuito de tornar o "racha" (jogo de futebol) com os meus colegas, uma brincadeira mais empolgante, pois o projeto conta com uma lista de artilheiros, o que torna a disputa pelo topo bem acirrada. Tecnologias utilizadas: Linguagem de Programação Ruby on Rails / Banco de Dados PostgreSQL / HTML / CSS / Bootstrap / jQuery / GitHub / Heroku)</p>
 				</div>
 				<br>
 				<div class="panel panel-default">
@@ -40,7 +40,7 @@
 				    <h3 class="panel-title"><b>CURRÍCULO RESUMIDO</b></h3>
 				  </div>
 				  <div class="panel-body">
-				    Formado em Administração, mas amante da Computação, se descobriu quando entrou na Procuradoria Geral do Estado do Ceará - PGE e acabou juntando os processos administrativos com a TI, desenvolvedor Ruby on Rails, desenvolve atividades de análise de sistemas nas linguagens de programação Ruby on Rails, JavaScript (jQuery), CSS e HTML juntamente com o banco de dados PostgresSQL. Com experiência em desenvolvimento de projetos (Ágil, Scrum, Kanban), hábil em levantamento de requisitos e documentação de sistemas.
+				    Formado em Administração, mas amante da Computação, se descobriu quando entrou na Procuradoria Geral do Estado do Ceará - PGE e acabou juntando os processos administrativos com a TI, desenvolvedor Ruby on Rails, desenvolve atividades de análise de sistemas nas linguagens de programação Ruby on Rails, JavaScript (jQuery), CSS e HTML juntamente com o banco de dados PostgreSQL. Com experiência em desenvolvimento de projetos (Ágil, Scrum, Kanban), hábil em levantamento de requisitos e documentação de sistemas.
 				  </div>
 				</div>
 				<div class="panel panel-default">
